// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-document-blueprint should handle non-existent document blueprint 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-document-blueprint should update a document blueprint 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
